saleor-infrastructure/terraform/modules/networking/main.tf
resource "aws_vpc" "main" {
  cidr_block                       = var.vpc_cidr
  assign_generated_ipv6_cidr_block = var.enable_ipv6
  enable_dns_hostnames             = true
  enable_dns_support               = true

  tags = { Name = "${var.project_name}-vpc" }
}
